--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1><a id="logo" href="index.html" title="Homepage">DONUT</a></h1>
             <nav id="menu">
                 <ul>
-                    <li class="currentPage"><a href="index.html" title="Homepage">HOME</a></li>
+                    <li><a href="index.html" title="Homepage" class="currentPage">HOME</a></li>
                     <li><a href="about.html" title="About Corey">ABOUT</a></li>
                     <li><a href="contact.html" title="">CONTACT</a></li>
                 </ul>
@@ -26,6 +26,10 @@
         </header>
         <div id="banner">
             <h1 id="bannertext">Go Nuts with Donuts!</h1>
+            <h3>Click button for more information!!!</h3>
+            <a class="button" href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=learning%20to%20learn" target="_blank" title="google learn to learn">
+                Click Me!!!
+            </a>
         </div>
         <main>
             
